--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
