--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "postcss": "^8.4.14",
+    "screenfull": "^6.0.2",
     "tailwindcss": "^3.1.6",
     "tw-elements": "^1.0.0",
     "vue": "^3.2.25",
